drawio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
spec:
  selector:
    app: drawio
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
  type: ClusterIP
