drawio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-drawio
  namespace: drawio
spec:
  ingressClassName: nginx
  rules:
  - host: drawio.trochalakis.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drawio
            port: 
              number: 8080
